Rebased and fixed conflict in edit.js #78 [not verified] Add attributes and settings for the new template, add 3rd party class on backend. Hide new feature behind beta block flag

--- a/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
+++ b/projects/plugins/jetpack/extensions/blocks/contact-form/editor.scss
@@ -83,6 +83,7 @@
 	.help-message,
 	.components-placeholder__fieldset {
 		text-align: left;
+		max-width: none;
 	}
 
 	.help-message {
